# ProSelecta

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Specification.md
Implementations/ProSelectaCPP/: CMakeLists.txt  README.md
Implementations/ProSelectaCPP/app/: CMakeLists.txt  ProSelectaCPP.cxx  ProSelecta_UnlimitedPower.cxx
Implementations/ProSelectaCPP/examples/: example_proselect.cxx  example_proselectup.cxx
Implementations/ProSelectaCPP/src/ProSelecta/: CMakeLists.txt  HardScatterSelector.h  PDGCodes.h  ProSelecta.cxx  ProSelecta.h  Projectors.h  Selectors.h  Units.h  ftypes.h
Implementations/ProSelectaCPP/src/ProSelecta/env/: PDGCodes.h  Projectors.h  Selectors.h  Units.h  env.h
Implementations/ProSelectaCPP/src/ProSelecta/env/detail/: HardScatterSelector.h  Selectors.h
Implementations/ProSolecta/: README.md
Implementations/pyProSelecta/: CMakeLists.txt  README.md
Implementations/pyProSelecta/app/: CMakeLists.txt  pyProSelecta.cxx
app/: CMakeLists.txt  ProSelectaBuild.py  ProSelectaCPP.cxx
cmake/Templates/: ProSelectaConfig.cmake.in  __init__.py.in  setup.ProSelecta.sh.in
env/ProSelecta/: MissingDatum.h  PDGCodes.h  ProjectionBook.h  Projectors.h  SelectBook.h  Selectors.h  Units.h  Vectors.h  cuts.h  details.h  env.h  event.h  function_project.h  function_select.h  function_weight.h  missing_datum.h  part.h  pdg.h  unit.h  vect.h
env/ProSelecta/detail/: Selectors.h  TMP.h  constants.h  cuts.h  event.h  except.h  part.h  projectors.h
env/ProSelecta/ext/: event_proj.h  scatter.h
env/ProSelecta/ext/nu/: event_proj.h  event_topo.h
env/ProSelecta/functions/: ProjectionFunctions.h  SelectFunctions.h  WeightFunctions.h
examples/: example.ipynb  example_MINERvA_PRL.129.021803.cxx  example_build_manifest.yml  example_hepmcprocess.py  example_proselect.cxx  example_proselect.py  neut.vect.hepmc
paper/: proselecta.tex
python/: CMakeLists.txt  pyProSelecta.cxx  pyProSelectaExtNu.cxx
python/test/: cutTests.py
src/ProSelecta/: CMakeLists.txt  FuncTypes.h  ProSelecta.cxx  ProSelecta.h  ProSelecta_cling.cxx  ProSelecta_cling.h  ftypes.h  pyProSelecta.cxx
src/ProSelecta/env/: FilterBook.h  HardScatterSelector.h  PDGCodes.h  ProjectionBook.h  Projectors.h  Selectors.h  Units.h  WeightBook.h  env.h
src/ProSelecta/env/detail/: Selectors.h
src/pyProSelecta/: CMakeLists.txt
test/: CMakeLists.txt  EnvTests.cxx  FunctionTests.cxx  README.md  READMETests.cxx  dummyPlugin.cxx  eventTests.cxx  exceptionTest.cxx  interpreter_py_function_definition.cxx  partTests.cxx  pluginTest.cxx  pluginTest.ipynb  pyProSelectaPlugin.cxx  test.py  testTests.cxx  test_event_builder.h  unitTests.cxx  vectTests.cxx
